<resources>
    <string name="app_name">FOTNewsApp</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="sections">Sections</string>
    <string name="home">Home</string>
    <string name="dev_info">Dev info.</string>
    <string name="name">Name</string>
    <string name="sandun_dissanayake">Sandun Dissanayake</string>
    <string name="student_number">Student Number</string>
    <string name="_2020t00864">2020T00864</string>
    <string name="personal_statement">Personal Statement</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="release_version">Release Version</string>
    <string name="_23_4_7_6">23.4.7.6</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="password_hide">**********</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_now">Don\'t have an account? Create Now</string>
    <string name="sports">Sports</string>
    <string name="welcome_sandun">Welcome Sandun</string>
    <string name="academic">Academic</string>
    <string name="fot_events">FOT Events</string>
    <string name="uoc_fot_news">UOC FOT NEWS</string>
    <string name="technova_x_2025_robotics_workshop">TECHNOVA-X 2025 Robotics Workshop</string>
    <string name="confirm_password_error_message">Confirm password error message</string>
    <string name="email_error_message">Email error message</string>
    <string name="password_error_message">Password error message</string>
    <string name="edit_info">Edit info.</string>
    <string name="dev_info_screen">Dev Info Screen</string>
    <string name="edit_your_user_profile">Edit your User Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_information">Edit Information</string>
    <string name="the_settings_page_of_the_fot_news_app_provides_users_with_essential_controls_to_manage_their_account_and_personalize_their_experience_designed_for_ease_of_use_the_page_features_a_clean_and_organized_layout_that_includes_the_following_functionalities">The Settings Page of the FOT News App provides users with essential controls to manage their account and personalize their experience. Designed for ease of use, the page features a clean and organized layout that includes the following functionalities:</string>
</resources>