<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center">


    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:maxWidth="@android:dimen/app_icon_size"
        android:src="@drawable/fot_logo"
        android:layout_marginBottom="40dp"/>


    <LinearLayout
        android:radius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:padding="36dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:elevation="8dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/username"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:background="@drawable/edittext_border"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/password"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password_hide"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:background="@drawable/edittext_border"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_gray"
            android:layout_marginTop="36dp"/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_create_now"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>