<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginVertical="16dp" />\
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_settings_page_of_the_fot_news_app_provides_users_with_essential_controls_to_manage_their_account_and_personalize_their_experience_designed_for_ease_of_use_the_page_features_a_clean_and_organized_layout_that_includes_the_following_functionalities"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginVertical="16dp" />
    <!-- Edit Info Button -->
    <Button
        android:id="@+id/btnEditInfo"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:text="@string/edit_information"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginTop="20dp"/>

    <!-- Delete Account Button -->
    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_gray"
        android:layout_marginTop="20dp"/>

    <!-- Sign Out Button -->
    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginTop="20dp"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled" />

</LinearLayout>
