<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black"
    android:gravity="center">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:maxWidth="@android:dimen/app_icon_size"
        android:src="@drawable/fot_logo"
        tools:ignore="ContentDescription,HardcodedText" />

    <!-- White Container for Login Form -->
    <LinearLayout
        android:radius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="5dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="Username"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/usernameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="Username"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:background="@drawable/edittext_border"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="Password"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText,SpUsage" />
        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/password_error_message"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:background="@drawable/edittext_border"
            android:padding="15dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="Conform Password"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/confirmPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/confirm_password_error_message"
            android:textSize="12sp" />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="**********"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:background="@drawable/edittext_border"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        tools:ignore="HardcodedText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="Email"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/email_error_message"
            android:textSize="12sp" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="fotmyapp@email.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:background="@drawable/edittext_border"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Register"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginTop="20dp"
        tools:ignore="HardcodedText" />


</LinearLayout>
    </LinearLayout>